CommentProjection 클래스 제거